--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
-  "name": "edzy-education-made-easy",
+  "name": "edzy",
   "version": "1.0.0",
-  "description": "",
+  "description": "A web platform providing free education, resources and mentorship to everyone",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Mayank Jain, Gunjan Rathore, Ishika Jain",
+  "engines": {
+    "node": "18.15.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ishikajain02/edzy.git"
+  },
+  "author": "Mayank Jain, Ishika Jain, Gunjan Rathore",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Ishikajain02/edzy/issues"
+  },
+  "homepage": "https://github.com/Ishikajain02/edzy#readme",
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "body-parser": "^1.20.2",
-    "ejs": "^3.1.9",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "firebase": "^9.19.0",
+    "firebase": "^8.10.0",
     "lodash": "^4.17.21",
-    "nodemon": "^2.0.22"
+    "mysql": "^2.18.1",
+    "node": "^18.15.0",
+    "nodemon": "^2.0.21"
   }
 }
